--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book a Call — Ivan Lontoc</title>
+    <title>#TalkToLontoc</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body>
-    <h1>Book a Call with Ivan Lontoc</h1>
+    <h1>#TalkToLontoc</h1>
     <div
       class="calendly-inline-widget"
       data-url="https://calendly.com/talktolontoc_"
